--- a/zro.css
+++ b/zro.css
@@ -1,21 +1,141 @@
-html {
-  font-family: "Comic Sans MS", Arial, sans;
-  font-size: 18px;
+a {
+  
 }
-
-h1, h2 {
+abbr {
+  
+}
+address {
+  
+}
+area {
+  
+}
+article {
+  
+}
+aside {
+  
+}
+b {
+  
+}
+base {
+  
+}
+bdi {
+  
+}
+bdo {
+  
+}
+blockquote {
+  
+}
+body {
+  
+}
+button {
+  
+}
+canvas {
+  
+}
+caption {
+  
+}
+cite {
+  
+}
+code {
+  
+}
+col {
+  
+}
+colgroup {
+  
+}
+datalist {
+  
+}
+dd {
+  
+}
+del {
+  
+}
+details {
+  
+}
+dfn {
+  
+}
+dialog {
+  
+}
+div {
+  
+}
+dl {
+  
+}
+dt {
+  
+}
+em {
+  
+}
+embed {
+  
+}
+fieldset {
+  
+}
+figcaption {
+  
+}
+figure {
+  
+}
+footer {
   text-align: center;
+  display: inline;
+  background-color: #efefef;
+  position: fixed;
+  padding: 20px;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  font-size: 12px;
 }
-
+form {
+  
+}
 h1 {
+  text-align: center;
   font-size: 48px;
 }
-
 h2 {
+  text-align: center;
   color: #555;
   font-size: 24px;
 }
-
+h3 {
+  
+}
+h4 {
+  
+}
+h5 {
+  
+}
+h6 {
+  
+}
+head {
+  
+}
 header {
   text-align: left;
   display: inline;
@@ -29,16 +149,175 @@ header {
   height: 100%;
   font-size: 12px;
 }
-
-footer {
-  text-align: center;
-  display: inline;
-  background-color: #efefef;
-  position: fixed;
-  padding: 20px;
-  left: 0px;
-  bottom: 0px;
-  width: 100%;
-  height: 50px;
-  font-size: 12px;
+hr {
+  
+}
+html {
+  font-family: "Comic Sans MS", Arial, sans;
+  font-size: 18px;
+}
+i {
+  
+}
+iframe {
+  
+}
+img {
+  
+}
+input {
+  
+}
+input[type=text] {
+  
+}
+input[type=checkbox] {
+  
+}
+input[type=radio] {
+  
+}
+input[type=submit] {
+  
+}
+ins {
+  
+}
+kbd {
+  
+}
+keygen {
+  
+}
+label {
+  
+}
+legend {
+  
+}
+li {
+  
+}
+link {
+  
+}
+main {
+  
+}
+map {
+  
+}
+mark {
+  
+}
+menu {
+  
+}
+menuitem {
+  
+}
+meter {
+  
+}
+nav {
+  
+}
+noscript {
+  
+}
+object {
+  
+}
+ol {
+  
+}
+optgroup {
+  
+}
+option {
+  
+}
+output {
+  
+}
+p {
+  
+}
+pre {
+  
+}
+progress {
+  
+}
+q {
+  
+}
+s {
+  
+}
+samp {
+  
+}
+select {
+  
+}
+small {
+  
+}
+span {
+  
+}
+strong {
+  
+}
+sub {
+  
+}
+summary {
+  
+}
+sup {
+  
+}
+table {
+  
+}
+tbody {
+  
+}
+td {
+  
+}
+textarea {
+  
+}
+tfoot {
+  
+}
+th {
+  
+}
+thead {
+  
+}
+time {
+  
+}
+title {
+  
+}
+tr {
+  
+}
+u {
+  
+}
+ul {
+  
+}
+var {
+  
+}
+video {
+  
 }
