--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <footer>
-<ul>
-<li>Copyright &copy; Zro617 | </li>
-<li><a href="//github.com/Zro617">GitHub</a> | </li>
-<li><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
-<li><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
-<li><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
-<li><a href="mailto:zropotato@gmail.com">Email</a></li>
+<ul class="nodot">
+<li class="ln">Copyright &copy; Zro617 | </li>
+<li class="ln"><a href="//github.com/Zro617">GitHub</a> | </li>
+<li class="ln"><a href="//scratch.mit.edu/users/Zro716">Scratch</a> | </li>
+<li class="ln"><a href="//soundcloud.com/zro-from-scratch">SoundCloud</a> | </li>
+<li class="ln"><a href="//plus.google.com/u/0/103893775840439999959">Google+</a> | </li>
+<li class="ln"><a href="mailto:zropotato@gmail.com">Email</a></li>
 </ul>
 <footer>
