--- a/src/css/zro.css
+++ b/src/css/zro.css
@@ -165,7 +165,7 @@ hr {
   margin: 20px;
 }
 html {
-  font-familly: "Segoe UI", Arial, sans-serif;
+  font-family: "Segoe UI", Arial, sans-serif;
   /* font-family: "Comic Sans MS", Arial, sans; */
   font-size: 18px;
 }
