--- a/src/css/zro.css
+++ b/src/css/zro.css
@@ -110,17 +110,15 @@ figure {
   
 }
 footer {
-  cursor:auto;
-  text-align: center;
   display: inline;
   background-color: #efefef;
   position: fixed;
-  margin-left: 150px;
+  margin-left: 120px;
   padding: 20px;
   left: 0px;
   bottom: 0px;
   width: 100%;
-  height: 50px;
+  height: 30px;
   font-size: 12px;
 }
 form {
@@ -153,13 +151,14 @@ header {
   display: inline;
   background-color: #efefef;
   position: fixed;
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   left: 0x;
   top: 0px;
   bottom: 0px;
-  width: 150px;
+  width: 120px;
   height: 100%;
-  font-size: 12px;
+  font-size: 16px;
 }
 hr {
   margin: 20px;
