--- a/src/css/zro.css
+++ b/src/css/zro.css
@@ -337,6 +337,7 @@ small {
 }
 span {
   display: inline;
+  font-size: 12px;
   margin: 5px;
 }
 strong {
@@ -363,6 +364,7 @@ td {
 textarea {
   font-family: "Consolas",monospace;
   font-size: 12px;
+  width: 95%;
   padding: 5px;
 }
 tfoot {
