--- a/src/css/zro.css
+++ b/src/css/zro.css
@@ -626,87 +626,88 @@ img.small-thumbnail {
   border-style: outset;
   border-width: 3px;
 }
-.sb .arg {
+.sb.arg {
+  border-radius: 2px;
   background-color: white;
   border-color: #ddd;
   color: black;
 }
-.sb .arg .text {
+.sb.arg.text {
   border-radius: 0px;
 }
-.sb .arg .num {
+.sb.arg.num {
   border-radius: 10px;
 }
-.sb .motion {
+.sb.motion {
   background-color: #4a6cd4;
   border-color: #4a6cd4;
   color: white;
 }
-.sb .looks {
+.sb.looks {
   background-color: #8a55d7;
   border-color: #8a55d7;
   color: white;
 }
-.sb .sound {
+.sb.sound {
   background-color: #bb42c3;
   border-color: #bb42c3;
   color: white;
 }
-.sb .pen {
+.sb.pen {
   background-color: #0e9a6c;
   border-color: #0e9a6c;
   color: white;
 }
-.sb .events {
+.sb.events {
   background-color: #c88330;
   border-color: #c88330;
   color: white;
 }
-.sb .control {
+.sb.control {
   background-color: #e1a91a;
   border-color: #e1a91a;
   color: white;
 }
-.sb .sensing: {
+.sb.sensing: {
   background-color: #2ca5e2;
   border-color: #2ca5e2;
   color: white;
 }
-.sb .operators {
+.sb.operators {
   background-color: #5cb712;
   border-color: #5cb712;
   color: white;
 }
-.sb .data {
+.sb.data {
   background-color: #ee7d16;
   border-color: #ee7d16;
   color: white;
 }
-.sb .list {
+.sb.list {
   background-color: #cc5b22;
   border-color: #cc5b22;
   color: white;
 }
-.sb .custom {
+.sb.custom {
   background-color: #632d99;
   border-color: #632d99;
   color: white;
 }
-.sb .custom-arg {
+.sb.custom-arg {
   background-color: #5947b1;
   border-color: #5947b1;
 }
-.sb .extensions {
+.sb.extensions {
   background-color: #4b4a60;
   border-color: #4b4a60;
   color: white;
 }
-.sb .undefined {
+.sb.undefined {
   background-color: #d42828;
   border-color: #d42828;
   color: white;
 }
-.sb .comment {
+.sb.comment {
   background-color: #ffffd2;
   border-color:#d0d1d2;
   color: #505050;
